--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Estudo</title>
+    <title></title>
     <!-- LEMBRAR de sempre colocar o link para seu css e javascript-->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./Imagens/avatar.png" alt="" />
-        <p>@maykbrito</p>
+        <img src="./Imagens/Eeu.png" alt="" />
+        <p>@robsonsousar</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -27,36 +27,59 @@
       <!-- a parte "ul" é para criar lista não ordenada-->
       <ul>
         <!-- "li" é o item da lista, para cada "li" é uma linha, para colocar tudo na mesma lion e abaixo o "a" são links-->
-        <li><a href="#">Inscreva-se no NLW</a></li>
-        <li><a href="#">Baixe meu e-book</a></li>
-        <li><a href="#">Veja meu portifólio</a></li>
+        <li>
+          <a href="https://github.com/RobsonRsousa" target="_blank"
+            >Veja meu GitHub</a
+          >
+        </li>
+        <li>
+          <a href="https://www.instagram.com/robsonsousar/" target="_blank"
+            >Siga no instagram</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://web.whatsapp.com/send?phone=5515997071610"
+            target="_blank"
+            >Me chame no WhatsApp
+          </a>
+        </li>
         <!--Nessa última linha foi colocado o atributo para que ao clicar seja aberto em outra aba com target:_blank-->
         <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank">
-            Conheça o explorer</a
+          <a
+            href="https://www.linkedin.com/in/robson-sousa-88336a134/"
+            target="_blank"
+          >
+            Acesse meu Linkedin</a
           >
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/maykbrito" target="_blank">
+        <a href="https://github.com/RobsonRsousa" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://instagram.com/maykbrito" target="_blank">
+        <a href="https://www.instagram.com/robsonsousar/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://youtube.com/maykbrito" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
+        <a
+          href="https://web.whatsapp.com/send?phone=5515997071610"
+          target="_blank"
+        >
+          <ion-icon name="logo-whatsapp"></ion-icon>
         </a>
 
-        <a href="https://linkedin.com/in/maykbrito" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/robson-sousa-88336a134"
+          target="_blank"
+        >
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
       <!--Se utiliza o footer normalmente para rodapé-->
       <footer>
-        Feito com ♥ pela
+        Feito com ♥ junto com a
         <a href="https://rocketseat.com.br" target="_blank">RocketSeat</a>
       </footer>
     </div>
