alterado frases na lista

--- a/index.html
+++ b/index.html
@@ -28,20 +28,18 @@
       <ul>
         <!-- "li" é o item da lista, para cada "li" é uma linha, para colocar tudo na mesma lion e abaixo o "a" são links-->
         <li>
-          <a href="https://github.com/RobsonRsousa" target="_blank"
-            >Veja meu GitHub</a
-          >
+          <a href="https://github.com/RobsonRsousa" target="_blank">GitHub</a>
         </li>
         <li>
           <a href="https://www.instagram.com/robsonsousar/" target="_blank"
-            >Siga no instagram</a
+            >Instagram</a
           >
         </li>
         <li>
           <a
             href="https://web.whatsapp.com/send?phone=5515997071610"
             target="_blank"
-            >Me chame no WhatsApp
+            >WhatsApp
           </a>
         </li>
         <!--Nessa última linha foi colocado o atributo para que ao clicar seja aberto em outra aba com target:_blank-->
@@ -50,7 +48,7 @@
             href="https://www.linkedin.com/in/robson-sousa-88336a134/"
             target="_blank"
           >
-            Acesse meu Linkedin</a
+            LinkeDin</a
           >
         </li>
       </ul>
